[gd_scene load_steps=8 format=3 uid="uid://bpwi0xbt7xeej"]

[ext_resource type="Shader" path="res://scripts/pause.gdshader" id="1_2x4rd"]
[ext_resource type="Script" path="res://scripts/pause_button.gd" id="1_lr05y"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jp48c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fmx1l"]
shader = ExtResource("1_2x4rd")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_51ri6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ah3gk"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.886]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c6g16"]
_data = {
"RESET": SubResource("Animation_51ri6"),
"blur": SubResource("Animation_ah3gk")
}

[node name="pause button" type="Control"]
process_mode = 3
material = SubResource("ShaderMaterial_jp48c")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -11.0
offset_top = -11.0
offset_right = -11.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lr05y")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_fmx1l")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -741.0
offset_top = -455.0
offset_right = -404.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
offset_left = -389.0
offset_top = -135.0
offset_right = 403.0
offset_bottom = 128.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
visible = false
layout_mode = 0
offset_left = -6.0
offset_top = 14.0
offset_right = 785.0
offset_bottom = 275.0

[node name="resume" type="Button" parent="."]
layout_mode = 0
offset_left = -384.0
offset_top = -125.0
offset_right = 402.0
offset_bottom = -32.0
text = "Resume"

[node name="restart" type="Button" parent="."]
layout_mode = 0
offset_left = -387.0
offset_top = -31.0
offset_right = 405.0
offset_bottom = 57.0
text = "Restart"

[node name="quit" type="Button" parent="."]
layout_mode = 0
offset_left = -388.0
offset_top = 58.0
offset_right = 404.0
offset_bottom = 140.0
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c6g16")
}

[connection signal="pressed" from="resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
